welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:14: error: not found: value &&
while (estSurBiscuit()!= true ) && estFaceMur() == false{
                                ^